--- a/public/reels.html
+++ b/public/reels.html
@@ -2,117 +2,137 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>iPhone Premium Template</title>
-    <script>
-        // Переносим логику в HEAD, чтобы текст был готов ДО отрисовки страницы
-        const params = new URLSearchParams(window.location.search);
-        const data = {
-            me: params.get('me') || '',
-            her: params.get('her') || '',
-            diag: params.get('diag') || '',
-            red: params.get('red') || ''
-        };
-    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>iPhone Style Chat - Fixed</title>
     <style>
+        :root {
+            --bg-main: #ffffff;
+            --bubble-me: #e5e5ea; /* Серый (Её ответ) */
+            --bubble-her: #007aff; /* Синий (Его сообщение) */
+            --risk-red: #ff3b30;
+        }
+
         body, html {
             margin: 0; padding: 0;
             width: 1080px; height: 1920px;
-            overflow: hidden;
+            background-color: var(--bg-main);
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            display: flex;
+            flex-direction: column;
+            overflow: hidden;
         }
 
-        /* 1. ФОН: Телефон на столе */
-        .main-bg {
-            position: relative;
-            width: 1080px; height: 1920px;
-            background: url('PHONE_TEMPLATE.png') no-repeat center center;
-            background-size: cover;
-        }
-
-        /* 2. АВАТАР */
-        .avatar-circle {
-            position: absolute;
-            top: 265px; left: 285px;
-            width: 90px; height: 90px;
-            border-radius: 50%;
-            background: url('celin.png') no-repeat center center;
-            background-size: cover;
-        }
-
-        /* 3. КОНТЕЙНЕР ЧАТА */
-        .chat-area {
-            position: absolute;
-            top: 420px; left: 200px;
-            width: 680px;
-            display: flex; flex-direction: column;
+        /* Область чата */
+        .chat-container {
+            padding: 60px 40px;
+            display: flex;
+            flex-direction: column;
             gap: 20px;
         }
 
         .bubble {
-            max-width: 85%;
-            padding: 22px 30px;
-            font-size: 34px;
-            border-radius: 35px;
+            max-width: 70%;
+            padding: 25px 35px;
+            font-size: 40px;
+            border-radius: 40px;
             line-height: 1.2;
+            position: relative;
+            /* Убираем анимации и прозрачность, чтобы текст был виден сразу */
+            opacity: 1 !important;
+            display: block !important;
         }
 
-        /* Его сообщение — СПРАВА (ЗЕЛЕНОЕ) */
-        .msg-right {
-            align-self: flex-end;
-            background-color: #34c759;
-            color: white;
-            border-bottom-right-radius: 5px;
-        }
-
-        /* Её ответ — СЛЕВА (СЕРОЕ) */
-        .msg-left {
+        /* Его сообщение (слева) */
+        .me {
             align-self: flex-start;
-            background-color: #e5e5ea;
+            background-color: var(--bubble-me);
             color: black;
             border-bottom-left-radius: 5px;
         }
 
-        /* 4. БЛОК АНАЛИЗА (НИЖЕ) */
+        /* Ее ответ (справа) */
+        .her {
+            align-self: flex-end;
+            background-color: var(--bubble-her);
+            color: white;
+            border-bottom-right-radius: 5px;
+            margin-top: 10px;
+        }
+
+        /* Блок анализа */
         .analysis-box {
-            position: absolute;
-            top: 860px; left: 200px;
-            width: 680px;
-            display: flex; flex-direction: column;
-            gap: 25px;
+            margin-top: 100px;
+            padding: 0 60px;
+            display: flex;
+            flex-direction: column;
+            gap: 30px;
         }
 
-        .main-msg {
-            font-size: 48px; font-weight: 800;
-            color: #1c1c1e; text-transform: uppercase;
+        .main-message {
+            font-size: 55px;
+            font-weight: 800;
+            color: #1c1c1e;
+            text-transform: uppercase;
             line-height: 1.1;
+            opacity: 1 !important;
         }
 
-        .red-verdict {
-            font-size: 56px; font-weight: 900;
-            color: #ff3b30; text-transform: uppercase;
-            border-top: 5px solid #ff3b30;
-            padding-top: 15px;
+        .red-line {
+            font-size: 65px;
+            font-weight: 900;
+            color: var(--risk-red);
+            text-transform: uppercase;
+            border-top: 4px solid var(--risk-red);
+            padding-top: 20px;
+            margin-top: 10px;
+            opacity: 1 !important;
+        }
+
+        .footer {
+            position: absolute;
+            bottom: 80px;
+            width: 100%;
+            text-align: center;
+            font-size: 30px;
+            color: #8e8e93;
         }
     </style>
+    <script>
+        // Функция выполняется мгновенно, не дожидаясь полной загрузки страницы
+        function fillData() {
+            const params = new URLSearchParams(window.location.search);
+            // Используем интервал, чтобы гарантированно поймать момент появления элементов в DOM
+            const checkExist = setInterval(function() {
+                const elements = {
+                    me: document.getElementById('msgMe'),
+                    her: document.getElementById('msgHer'),
+                    diag: document.getElementById('diagBox'),
+                    red: document.getElementById('redLine')
+                };
+
+                if (elements.me && elements.her && elements.diag && elements.red) {
+                    elements.me.innerText = params.get('me') || '';
+                    elements.her.innerText = params.get('her') || '';
+                    elements.diag.innerText = params.get('diag') || '';
+                    elements.red.innerText = params.get('red') || '';
+                    clearInterval(checkExist);
+                }
+            }, 5); // Проверка каждые 5 миллисекунд
+        }
+        fillData();
+    </script>
 </head>
 <body>
-    <div class="main-bg">
-        <div class="avatar-circle"></div>
-
-        <div class="chat-area">
-            <script>
-                // Выводим сообщения сразу при чтении HTML
-                document.write(`<div class="bubble msg-right">${data.me}</div>`);
-                document.write(`<div class="bubble msg-left">${data.her}</div>`);
-            </script>
-        </div>
-
-        <div class="analysis-box">
-            <script>
-                document.write(`<div class="main-msg">${data.diag}</div>`);
-                document.write(`<div class="red-verdict">${data.red}</div>`);
-            </script>
-        </div>
+    <div class="chat-container">
+        <div class="bubble me" id="msgMe"></div>
+        <div class="bubble her" id="msgHer"></div>
     </div>
+
+    <div class="analysis-box">
+        <div class="main-message" id="diagBox"></div>
+        <div class="red-line" id="redLine"></div>
+    </div>
+
+    <div class="footer">Analyse de risque en cours...</div>
 </body>
 </html>
